source/stylesheets/products.sass
@import 'variables'

.product-list
  list-style: none
  margin: 0
  margin-top: 280px
  max-width: 100%
  padding: 0 60px
  position: relative
  width: 100%
  
  @media screen and (max-width: $break-medium)
    padding: 0
  
.product-card
  +transition(opacity 2s cubic-bezier(.25,.1,.25,1))
  max-width: 53%
  margin-bottom: 40%
  position: relative
  width: 100%
  
  .product-status
    font-size: 24px
    line-height: 30px
    
  .product-name
    font-size: 64px
  
  .product-info
    +transform(translateX(-50%) translateY(-50%))
    +transition(all .5s cubic-bezier(.25,.1,.25,1))
    left: 50%
    max-width: 50%
    opacity: 0
    position: fixed
    text-align: center
    top: 50%
    visibility: hidden
    width: 100%
  
  &:nth-child(odd)
    margin-left: auto
    
.show-product-title .product-info
  opacity: 1
  visibility: visible
  
.product-link
  display: block
  position: relative
  
.product-thumbnail-image
  display: block
  width: 100%
  
.spinner 
  width: 40px
  height: 40px
  margin: 200px auto
  background-color: #111
  border-radius: 100%
  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out
  animation: sk-scaleout 1.0s infinite ease-in-out

@-webkit-keyframes sk-scaleout
  0%
    -webkit-transform: scale(0)
  100%
    -webkit-transform: scale(1.0)
    opacity: 0

@keyframes sk-scaleout
  0% 
    -webkit-transform: scale(0)
    transform: scale(0)
  100%
    -webkit-transform: scale(1.0)
    transform: scale(1.0)
    opacity: 0

.infinite-scroll-last
  font-size: 16px
  text-align: center

